<resources>
    <string name="app_name">LilFitness</string>
    <string name="welcome_title">Welcome to LilFitness</string>
    <string name="welcome_subtitle">Your little fitness companion</string>
    <string name="start_workout">Start Workout</string>
    <string name="view_progress">View Progress</string>
    <string name="view_history">View History</string>
    <string name="exercises">Exercises</string>
    <string name="today_stats">Today\'s Stats</string>
    <string name="workouts_completed">Workouts Completed</string>
    <string name="total_minutes">Total Minutes</string>
    <string name="calories_burned">Calories Burned</string>
    <string name="settings">Settings</string>
</resources>